--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="container">
         <!-- Replace the src with your girlfriend's photo URL -->
         <div class="photo-container">
-            <img src="https://via.placeholder.com/200" alt="Your Beautiful Girlfriend" id="photo">
+            <img src="https://raw.githubusercontent.com/FORMAT-2/FORMAT-2/refs/heads/main/04176226-2a29-4ed8-93c9-6e7072388877.jfif" alt="Your Beautiful Girlfriend" id="photo">
         </div>
 
         <div id="question-section">
